@@ -78,15 +78,15 @@ enum {
   scheme_listener_type,
   scheme_namespace_type, 
   scheme_config_type,
-  scheme_defaulting_config_type, 
+  scheme_reserved_1_type, 
   scheme_will_executor_type,
   scheme_interface_type,
   scheme_manager_type,  /* 70 */
   scheme_random_state_type,
+  scheme_regexp_type,
 
   /* These reserved types will let us add types
      without forcing recompilation of compiled MzScheme code */
-  scheme_reserved_2_type,
   scheme_reserved_3_type,
 
   /* more internal types: */
@@ -105,13 +105,74 @@ enum {
 
   scheme_compiled_unit_type,
   scheme_unit_body_data_type,
-  scheme_unit_body_closure_data_type,
+  scheme_reserved_5_type,
   scheme_unit_compound_data_type,
   scheme_invoke_unit_data_type,
 
   scheme_interface_data_type,  /* 90 */
 
   scheme_svector_type,
+
+#ifdef MZTAG_REQUIRED
+  _scheme_last_normal_type_,
+
+  scheme_rt_comp_env,
+  scheme_rt_constant_binding,
+  scheme_rt_link_info,
+  scheme_rt_compile_info,
+  scheme_rt_cont_mark,
+  scheme_rt_saved_stack,
+  scheme_rt_eval_in_env,
+  scheme_rt_reply_item,
+  scheme_rt_closure_info,
+  scheme_rt_overflow,
+  scheme_rt_dyn_wind_cell,
+  scheme_rt_cont_mark_chain,
+  scheme_rt_dyn_wind_info,
+  scheme_rt_dyn_wind,
+  scheme_rt_dup_check,
+  scheme_rt_class_var,
+  scheme_rt_class_method,
+  scheme_rt_class_assembly,
+  scheme_rt_init_obj_rec,
+  scheme_rt_super_init_data,
+  scheme_rt_thread_memory,
+  scheme_rt_input_file,
+  scheme_rt_input_fd,
+  scheme_rt_oskit_console_input,
+  scheme_rt_tested_input_file,
+  scheme_rt_indexed_string,
+  scheme_rt_output_file,
+  scheme_rt_load_handler_data,
+  scheme_rt_load_data,
+  scheme_rt_pipe,
+  scheme_rt_beos_process,
+  scheme_rt_system_child,
+  scheme_rt_tcp,
+  scheme_rt_write_data,
+  scheme_rt_tcp_select_info,
+  scheme_rt_namespace_option,
+  scheme_rt_param_data,
+  scheme_rt_will,
+  scheme_rt_will_registration,
+  scheme_rt_breakable_wait,
+  scheme_rt_sema_waiter,
+  scheme_rt_struct_proc_info,
+  scheme_rt_linker_name,
+  scheme_rt_unit_id,
+  scheme_rt_body_expr,
+  scheme_rt_body_var,
+  scheme_rt_param_map,
+  scheme_rt_export_source,
+  scheme_rt_unit_data_closure,
+  scheme_rt_compound_linked_data,
+  scheme_rt_do_invoke_data,
+  scheme_rt_finalization,
+  scheme_rt_finalizations,
+  scheme_rt_gc_finalization,
+  scheme_rt_gc_weak_array,
+  scheme_process_hop_type,
+#endif
 
   _scheme_last_type_
 };
